crates/vespertide-planner/src/diff/tests/snapshots/vespertide_planner__diff__tests__diff_tables__create_table_with_inline_index.snap
---
source: crates/vespertide-planner/src/diff/tests/diff_tables.rs
expression: plan.actions
---
[
    CreateTable {
        table: "users",
        columns: [
            ColumnDef {
                name: "id",
                type: Simple(
                    Integer,
                ),
                nullable: false,
                default: None,
                comment: None,
                primary_key: Some(
                    Bool(
                        true,
                    ),
                ),
                unique: None,
                index: Some(
                    Bool(
                        false,
                    ),
                ),
                foreign_key: None,
            },
            ColumnDef {
                name: "name",
                type: Simple(
                    Text,
                ),
                nullable: true,
                default: None,
                comment: None,
                primary_key: None,
                unique: Some(
                    Bool(
                        true,
                    ),
                ),
                index: Some(
                    Bool(
                        true,
                    ),
                ),
                foreign_key: None,
            },
        ],
        constraints: [],
    },
]
